<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.fragment.RegisterFragment">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxxl"
            android:text="@string/app_name"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_giant"
            android:layout_marginTop="@dimen/margin_xxxl"
            android:text="@string/eposea_description"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_xxxl"
            android:layout_marginTop="@dimen/margin_xxxl"
            android:hint="@string/hint_email"
            app:helperText="@string/email_field_helper_text"
            app:startIconDrawable="@drawable/ic_round_alternate_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_xxxl"
            android:layout_marginTop="@dimen/margin_big"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:helperText="@string/password_field_hint"
            app:startIconDrawable="@drawable/ic_round_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_passwordRepeat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_xxxl"
            android:layout_marginTop="@dimen/margin_big"
            android:hint="@string/hint_password_repeat"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:helperText="@string/password_error_must_match"
            app:startIconDrawable="@drawable/ic_round_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_passwordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_l"
            android:layout_marginHorizontal="@dimen/margin_xxxl"
            android:layout_marginTop="@dimen/margin_l"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/sign_up"
                tools:enabled="true" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:indeterminate="true"
                android:visibility="gone" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_codeFromEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_xxxl"
            android:layout_marginTop="@dimen/margin_big"
            android:hint="@string/hint_code_from_email"
            android:visibility="gone"
            app:startIconDrawable="@drawable/ic_round_abc_24"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_emailCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sendConfirmationCode"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_xxxl"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_xxl"
            android:enabled="false"
            android:text="@string/send_confirmation_code"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            tools:visibility="visible" />
    </LinearLayout>
</ScrollView>